[gd_scene load_steps=4 format=3 uid="uid://c6gw4axhc2jm5"]

[ext_resource type="Script" path="res://Game/Main.gd" id="1"]
[ext_resource type="Script" path="res://Menu/side_panel.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnsne"]
bg_color = Color(0.678431, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Main" type="Node3D"]
script = ExtResource("1")

[node name="side_panel" type="PanelContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -214.0
script = ExtResource("2")

[node name="VBox" type="VBoxContainer" parent="side_panel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Player_Name" type="Label" parent="side_panel/VBox"]
layout_mode = 2
text = "Player"

[node name="Health_Bar" type="ProgressBar" parent="side_panel/VBox"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_dnsne")
value = 100.0

[node name="Log" type="ScrollContainer" parent="side_panel/VBox"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="side_panel/VBox/Log"]
layout_mode = 2

[node name="Save" type="Button" parent="side_panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "   Save   "

[node name="Menu" type="Button" parent="side_panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "   Menu   "

[node name="Quit" type="Button" parent="side_panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "   Quit   "

[connection signal="pressed" from="side_panel/VBox/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="side_panel/VBox/Menu" to="side_panel" method="_on_Menu_pressed"]
[connection signal="pressed" from="side_panel/VBox/Quit" to="side_panel" method="_on_Quit_pressed"]
